Update widget UI - Add links to the widget footer - Fix tab ids - Hide footer for single lang examples - Fix radio buttons on Safari

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -423,16 +423,26 @@ select {
 }      
 
 .codetabs .label {
-  min-width: 4rem;
+  min-width: 2rem;
+  line-height: 0.852rem;
+  color: #8CA0AD;
 }
+
+.codetabs .label:active {
+  color: white;
+}
+
 
 .codetabs .radiotab:focus + .label {
   @apply bg-transparent text-indigo-600;
 }
 
 .codetabs .radiotab:checked + .label {
-  @apply bg-slate-900 border-slate-900 not-italic;
+  @apply border-slate-900 not-italic;
+  @apply bg-slate-600 text-white pt-1 mt-2.5;
+
 }
+
 
 .codetabs .radiotab:checked + .label + .panel {
   @apply block;
@@ -442,6 +452,33 @@ select {
   @apply rounded-tl-none m-0;
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+.codetabs.cli + .cli-footer {
+  border-bottom-left-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
+
+.cli-footer {
+  background-color: #282F43;
+  min-height: 32px;
+}
+
+.cli-footer a.rounded {
+  background-color: #3E4977;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.cli-footer a.rounded:hover {
+  background-color: #3E4981;
+}
+
+.codetabs.cli > .panel .highlight > .chroma {
+    margin: 1rem 1rem 0.1rem 0.1rem;
+    overflow-x: hidden;
+    padding-bottom: 0;
+}
+
+.codetabs .chroma .language-plaintext .cl {
+    white-space: break-spaces;
 }
 
 .codetabs > .panel .highlight .chroma > .lntable td:first-child .chroma {
@@ -983,4 +1020,10 @@ code
 /* TextWhitespace */
 .chroma .w {
   @apply text-slate-500;
+}
+/* Safari input[type = radio] fix for tabs */
+input[type="radio"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
